--- a/lab02/clause-bio.html
+++ b/lab02/clause-bio.html
@@ -15,11 +15,11 @@
             <li>Lacrosse</li>
             <li>Martial Arts</li>
             <li>Workout</li>
-            <a href="">
+            <a href="http:www.andreclause.dev">
             <li>Code</a li>
             </a>
         </ul>
-    <p><i>~ Andre</i></p>
+    <p><i>~ Andre &copy; 2024</i></p>
     
     </body>
 </html>
