--- a/lab02/clause-bio.html
+++ b/lab02/clause-bio.html
@@ -15,7 +15,7 @@
             <li>Lacrosse</li>
             <li>Martial Arts</li>
             <li>Workout</li>
-            <a href="http:www.andreclause.dev">
+            <a href="https://www.google.co.uk/">
             <li>Code</a li>
             </a>
         </ul>
